tests/paczka1/small_fuzzy/96186939.err
Error in line 2: qWgYA S67 3,2
Error in line 14: 2zgxc S67 81,3
